examples/errors/parsing/booleans-uppercase-true.cn
main : () [impure] =
  let a = True && False;
  ()
